Address refaster and build errors